# Auto-remediation-single-client

./: .cfignore  .env.vector_store.example  .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  README.md  ROUTES_DOCUMENTATION.md  SYSTEM_DOCUMENTATION.md  index.html  links.txt  links1.txt  links10.txt  links2.txt  links3.txt  links4.txt  links5.txt  links6.txt  links7.txt  links8.txt  links9.txt  main.py  main_legacy.py  main_v2.py  manifest.yml  mcp_tools_analysis.json  mkdocs.yml  pyproject.toml  requirements.txt  scrape_sap_docs.py  sitemap.xml  smart_monitoring.py  smart_monitoring_dashboard.py  vectorize_docs.py
.claude/: settings.json  settings.local.json
.github/workflows/: docs.yml
aem/: event_bus.py  solace_client.py  test_aem_connection.py
aem/event-bus/: index.html
agents/: base.py  classifier_agent.py  fix_agent.py  observer_agent.py  orchestrator_agent.py  rca_agent.py  verifier_agent.py
config/: config.py  runtime_config.json
core/: constants.py  mcp_manager.py  state.py  validators.py
db/: database.py
deployment/: index.html
docs/: FRONTEND_DEPLOYMENT.md  deployment.md  index.md  tickets-and-approvals.md
frontend/: .env.production  index.html  manifest.yaml  package-lock.json  package.json  vite.config.ts
logs/: mcp.log.1
rules/: coding-style.md  sap_cpi_iflow_xml_patterns.md  security.md  testing.md
site/: 404.html  sitemap.xml
solace_pubsubplus-1.11.0.dist-info/: RECORD
storage/: object_store.py  storage.py
tickets-and-approvals/: index.html
ui/: index.html
utils/: logger_config.py  utils.py  vector_store.py  xsd_handler.py
(+78 files in other folders)
